--- a/style.css
+++ b/style.css
@@ -216,20 +216,56 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    text-align: center;
     margin: 2.4vw 12vw 6vw;
-    gap: 1.2vw;
+    gap: 1.2vw 0;
 }
 .vid-block-info{
     width: 17.3vw;
+    position: relative;
+}
+.vid-overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 84%;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #FF42A5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.25s;
+}
+.vid-overlay .fa-regular{
+    font-size: 5vw;
+    margin-bottom: 1vw;
+}
+.vid-block-info:hover .vid-overlay{
+    opacity: 1;
+    border: 1px solid #FF42A5;
 }
 .vid-img{
+    display: block;
     width: 100%;
     height: 20vw;
     border-radius: 0.8vw;
+    margin-bottom: 1.2vw;
+}
+#img-3{
+    position: relative;
+    bottom: 0.6vw;
 }
 .vid-text{
     width: 17.3vw;
     text-align: start;
+    color: #534C64;
+    font-size: 1vw;
+    font-weight: 500;
+    line-height: 1.5vw;
 }
 /* section play here  */
 .play-block-1{
@@ -374,12 +410,12 @@ body{
 }
 /* section games here  */
 .games-cont{
-    display: grid;
-    grid-template-columns: repeat(5,1fr);
+    display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap:1.3vw;
-    border-radius: 50%;
+    gap:20px;
+    margin: 0 10vw;
     margin-bottom: 6vw;
 }
 .games-block{
@@ -392,6 +428,7 @@ body{
 .games-img{
     width: 3vw;
     height: 3vw;
+    margin-right: 10px;
 }
 .games-text{
     color: #0B0223;
