--- a/media-query.css
+++ b/media-query.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 576px) {
     .nav-cont {
         flex-direction: column;
         margin-bottom: 30px;
@@ -216,10 +216,10 @@
         .vid-overlay {
             margin-top: 10px;
             position: absolute;
-            top: 0;
+            top: 10px;
             left: 0;
             width: 100%;
-            height: 80%;
+            height: 51vw;
             background-color: rgba(0, 0, 0, 0.6);
             color: #FF42A5;
             display: flex;
@@ -229,6 +229,7 @@
             text-align: center;
             opacity: 0;
             transition: opacity 0.25s;
+            border-radius:0.8vw;
         }
         .vid-img {
             width: 100%;
@@ -239,10 +240,10 @@
             margin-top: 20px;
         }
     
-        #img-3 {
+        /* #img-3 {
             position: relative;
-            bottom: 0.7vw;
-        }
+            bottom: 0.6vw;
+        } */
     
         .vid-text {
             width: 35vw;
