--- a/style.css
+++ b/style.css
@@ -224,12 +224,15 @@ body{
     width: 17.3vw;
     position: relative;
 }
+.vid-block-text{
+    width: 17.3vw;
+}
 .vid-overlay{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 84%;
+    height: 20vw;
     background-color: rgba(0, 0, 0, 0.6);
     color: #FF42A5;
     display: flex;
@@ -244,9 +247,10 @@ body{
     font-size: 5vw;
     margin-bottom: 1vw;
 }
-.vid-block-info:hover .vid-overlay{
+.hover-here:hover .vid-overlay{
     opacity: 1;
     border: 2px solid #FF42A5;
+    border-radius:0.8vw;
 }
 .vid-img{
     display: block;
